--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <script src="intro/basics.js"></script>
+    <script src="typesTS/types.js"></script>
+    <script src="interfacesTS/interface.js"></script>
 </body>
 </html>
